--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.5.2",
     "pg": "^8.16.3",
     "react": "19.1.0",
