--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.542.0",
+    "nanoid": "^5.1.5",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
