--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.85.6",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
