--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.85.6",
     "axios": "^1.11.0",
@@ -32,6 +34,8 @@
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.542.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.23.22",
     "nanoid": "^5.1.5",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
@@ -42,7 +46,9 @@
     "react-dom": "19.1.0",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
+    "three-globe": "^2.44.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
