--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@remixicon/react": "^4.6.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.85.6",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
