--- a/package.json
+++ b/package.json
@@ -47,9 +47,7 @@
     "react-dom": "19.1.0",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "three": "^0.180.0",
-    "three-globe": "^2.44.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
